[package]
name = "cbfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = "3.2.8"
config = "0.13.1"
futures = "0.3.21"
serde = "1.0.138"
termcolor = "1.1.3"
thiserror = "1.0.31"
tokio = { version= "1.20.0", features = ["macros", "fs", "rt-multi-thread"] }
tree-sitter = "~0.20"
tree-sitter-md = "0.1.1"
tree-sitter-org = { path = "./tree-sitter-org" }
walkdir = "2.3.2"

[build-dependencies]
cc="*"
