[package]
name = "cbfmt"
version = "0.2.0"
edition = "2021"
description = "A tool to format codeblocks inside markdown, org, and restructuredtext documents"
repository = "https://github.com/lukas-reineke/cbfmt"
categories = ["development-tools"]
keywords = ["format", "markdown", "org", "codeblock"]
license = "MIT"

[[bin]]
name = "cbfmt"
doc = false

[dependencies]
atty = "0.2.14"
clap = "3.2.8"
futures = "0.3.21"
ignore = "0.4.18"
serde = { version = "1.0.138", features = ["derive"] }
termcolor = "1.1.3"
textwrap = "0.15.0"
thiserror = "1.0.37"
tokio = { version = "1.20.0", features = ["macros", "fs", "rt-multi-thread"] }
toml = "0.5.9"
tree-sitter = "~0.20"
tree-sitter-md = "0.1.1"
tree-sitter-org = "1.3.0"
tree-sitter-rst = "0.1.0"

[build-dependencies]
cc = "1.0.73"
